# support-rag

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: chunking.py  config.py  db.py  init_db.py  main.py  models.py  openai_client.py  rag.py  schemas.py  test_chunking.py  test_openai.py
backend/app/routers/: documents.py  query.py
backend/evals/: run_eval.py  support_qa.json
backend/evals/docs/: eval-report.md
docs/: architecture.md  failure-cases.md
frontend/src/app/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/lib/: api.ts
infra/cdk/: package-lock.json
infra/cdk/lib/: support-rag-stack.ts
